# quick-copy-rs

./: Cargo.toml  README.md  args.txt
src/: change_detector.rs  configuration.rs  constants.rs  copier.rs  files.rs  header.rs  main.rs  paths.rs  tests.rs  utilities.rs
