[package]
name = "quick-copy"
version = "0.1.0"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
cfg-if = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "fileapi"] }