[package]
name = "quick-copy"
version = "1.0.2"
authors = ["Jon Fast <jnfstdj656@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
log = "0.4"
fern = "0.6"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "derive"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }